# fastapi-localitati

./: .gitignore  README.md  pyproject.toml
fastapi_localitati/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py  settings.py
fastapi_localitati/routers/: __init__.py  localitati.py
fastapi_localitati/scripts/: mysql_charset_audit.py  sync_anaf.py
localitati_sdk/: __init__.py  api.py  bootstrap_refresh_token.py  client.py  errors.py  token_manager.py
scripts/: README.md  create_user.py  list_routes.py  smoke_test.py  sync_anaf.py  sync_smoke_logging.py
scripts/client_app/: api.py  bootstrap_refresh_token.py  client.py  token_manager.py
